# bcachefs-tools

./: .bcachefs_revision  .gitignore  Makefile  bcachefs.c  default.nix  flake.nix  mount
.github/workflows/: nixos.yml
cmds/: sbfind
cmds/sbfind/: Cargo.toml
cmds/sbfind/src/: main.rs
libbcachefs/: bcachefs_format.h  dirent.c  fsck.c  recovery.c  super-io.c  super-io.h
mount/: Cargo.toml  default.nix
mount/src/: filesystem.rs  key.rs  lib.rs
nix/: bcachefs-kernel.nix  bcachefs.rev.sha256  overlay.nix
rlibbcachefs/: Cargo.toml  build.rs  default.nix
rlibbcachefs/cmds/mount/: Cargo.toml  default.nix  module.nix
rlibbcachefs/cmds/mount/src/: key.rs
rlibbcachefs/cmds/sbfind/: Cargo.toml  default.nix  result
rlibbcachefs/cmds/sbfind/src/: main.rs
rlibbcachefs/src/: bcachefs.rs  keyutils.rs  lib.rs  libbcachefs_wrapper.h  rs.rs
rust-src/bch_bindgen/src/: rs.rs
rust-src/mount/: Cargo.toml
rust-src/rbcachefs/: Cargo.toml  build.rs  default.nix
rust-src/rbcachefs/include/: rbcachefs_bindings.h
rust-src/rbcachefs/src/: lib.rs
rust-src/rbcachefs/src/c/bcachefs/: libbcachefs_wrapper.h
rust-src/rbcachefs/src/cmds/: bcachefs.rs  cmd_format.rs  cmd_fsck.rs  cmd_show_super.rs  mod.rs  sb_recover.rs
rust-src/rbcachefs/src/cmds/mount/: filesystem.rs  main.rs  mod.rs
rust-src/rbcachefs/src/rbcachefs/: err.rs  mod.rs  opts.rs  super_fs.rs  tools_util.rs
rust-src/rlibbcachefs/: Cargo.toml  default.nix
rust-src/rlibbcachefs/src/: lib.rs
rust-src/sbfind/: Cargo.toml
rust-src/sbfind/src/: main.rs
