[package]
name = "sbfind"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bch_bindgen = { path = "../bch_bindgen/" }
structopt = "0.3.23"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
uuid = "0.8.2"
